--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,9 @@
 /* _________________common style__________________ */
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Roboto Serif', sans-serif;
 }
